support for new config_lock param and added this param to the loadconfig action

--- a/actions/loadconfig.yaml
+++ b/actions/loadconfig.yaml
@@ -40,3 +40,8 @@ parameters:
         description: "Optionally commit the config after loading"
         default: true
         position: 6
+    config_lock:
+        type: "boolean"
+        description: "Lock the configuration when loading the config"
+        default: true
+        position: 7
